# labyrinth

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_github_app_client.txt
.github/workflows/: ci.yml  publish_to_pypi.yml
completions/: _labyrinth
examples/agent/: __init__.py  analysis.py  candidates.py  emitter.py  prompts.py  report.py  runner.py
examples/agent/heuristics/: __init__.py  _base.py  configurable.py  insecure_endpoint.py  orphaned_ecr_repo.py  unlinked_dockerfile.py  unlinked_entrypoint.py  vulnerable_dependency.py
examples/mcp_server/: _formatting.py  graph_store.py  main.py
examples/mcp_server/tools/: code_data.py  node_metadata.py  query.py  security.py  soft_links.py  traversal.py
examples/terraform/: alb.tf  apigateway.tf  database.tf  dns.tf  ecr.tf  ecs.tf  main.tf  networking.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
examples/testapp/: Dockerfile  main.py  pyproject.toml  s3_wrapper.py
labyrinth/agent/: __init__.py  action_log.py  analysis.py  candidates.py  emitter.py  prompts.py  report.py  runner.py  worktree.py
labyrinth/agent/heuristics/: __init__.py  _base.py  configurable.py  insecure_endpoint.py  orphaned_ecr_repo.py  unlinked_dockerfile.py  unlinked_entrypoint.py  vulnerable_dependency.py
labyrinth/agent/skills/: link-dockerfile-to-ecr.md  link-dockerfile-to-entrypoint.md  remediate-vulnerable-dependency.md
labyrinth/cli/: CLAUDE.md  main.py  settings.py
labyrinth/cli/serve/: index.html
labyrinth/drivers/sql/: __init__.py  base.py  models.py  mysql.py  oracle.py  postgres.py
labyrinth/graph/: __init__.py  credentials.py  graph_models.py  scanner.py
labyrinth/graph/edges/: __init__.py  _base.py  allows_traffic_to_edge.py  assumes_edge.py  attaches_edge.py  builds_edge.py  calls_edge.py  contains_edge.py  depends_on_edge.py  executes_edge.py  hosts_edge.py  instantiates_edge.py  member_of_edge.py  models_edge.py  okta_edges.py  protected_by_edge.py  reads_edge.py  references_edge.py  resolves_to_edge.py  routes_to_edge.py  soft_reference_edge.py  sso_assigned_to_edge.py  writes_edge.py
labyrinth/graph/enrichment/: sensitivity_classifier.py
labyrinth/graph/loaders/: __init__.py  _base_plugin.py  _helpers.py  loader.py
labyrinth/graph/nodes/: __init__.py  _aws_resource_mixin.py  api_gateway_node.py  aws_account_node.py  (+29 more)
labyrinth/mcp/: main.py
scripts/: build_graph.py  graph_mcp_server.py  soft_links.json  visualize.html
src/agent/: __init__.py  analysis.py  candidates.py  emitter.py  prompts.py  report.py  runner.py
src/cli/: main.py  scan.py  visualize.html
src/drivers/: __init__.py  base.py  mysql.py  oracle.py  postgres.py
src/graph/: TODO.md  __init__.py  credentials.py  graph_models.py  scanner.py  stitching.py  store.py
src/mcp/: _formatting.py  graph_store.py  main.py
tests/: test_codebase_loader.py  test_import_resolver.py  test_onprem_postgres_loader.py  test_s3_trie.py
tests/agent/: test_analysis.py  test_candidates.py  test_heuristics.py  test_prompts.py  test_report.py
tests/cli/: test_scan.py
tests/graph/: test_graph_models.py  test_scanner.py  test_stitch_aws_resources.py  test_stitch_entrypoints.py  test_stitch_images.py  test_stitch_networking.py  test_stitching.py
(+318 files in other folders)
